access weather data by city

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg text-white bg-dark justify-content-center">Weather Dashboard</nav>
-    
+   
+    <script src="assets/js/script.js"></script>
 </body> 
 </html>
