added search form with styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg text-white bg-dark justify-content-center">Weather Dashboard</nav>
-   
+    <main class="flex-row justify-space-between">
+        <div class="col-12 col-md-4">
+            <form>
+                <label for="Search for a City:">Search for a City:</label>
+                <div class="input-group">
+                    <input class="form-control" type="search-text">
+                      <span class="input-group-text" id="city-name"><i class="fas fa-search"></i></span>
+                  </div>
+            </form> 
+        <div class="col-12 col-md-8"></div>
+      </main> 
+
     <script src="assets/js/script.js"></script>
 </body> 
 </html>
