display today's weather as per the city

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <form id="history"></form>
             </div>
 
-            <div class= "col-12 col-md-8">
+            <div class= "col-12 col-md-8" id ="response-container">
+                <div id="response"></div>
 
             </div>
           </div>
