--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="navbar-text text-white ">Weather Dashboard</span>
     </nav>
       <!-- main content -->
-      <div class="container">
+      <div class="container-fluid h-100">
           <div class="row">
               <!-- user-input column -->
             <div class="col-12 col-md-3 bg-light">
@@ -49,7 +49,7 @@
                   </div>
             </div>
               <!-- display response column -->
-            <div class= "col-12 col-md-9" id ="response-container">
+            <div class= "col-md-9" id ="response-container">
                <!-- current-day -->
                 <div class="currentday-container" id="currentDay"></div>
                 <!-- 5-day forecast -->
@@ -58,7 +58,7 @@
                         <div class="col-12" id="forecast-text"></div>
                     </div>
                     <div class="row ">
-                        <div class="row" id="forecast"> 
+                        <div class="container-fluid" id="forecast"> 
                     </div>
                 </div>
             </div>
