--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
           </div>
       </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body> 
 </html>
